<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaRedefinirSenha">

    <ImageButton
        android:contentDescription="@string/descricaoBotaoVoltar"
        android:id="@+id/botaoVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/seta_azul" />

    <ImageView
        android:id="@+id/logoAlexandria"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/contDescLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoVoltar"
        app:srcCompat="@drawable/logoalexandriavirtual" />

    <TextView
        android:id="@+id/tituloAlexandria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/contDescTitulo"
        android:fontFamily="@font/trocchi"
        android:text="@string/titulo"
        android:textColor="#247AE8"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoAlexandria" />

    <LinearLayout
        android:id="@+id/container_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/linear_layout_borda"
        android:orientation="vertical"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloAlexandria">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:hint="Senha atual"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeColor="@color/borda_input"
            app:hintTextColor="#247AE8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/senhaAtual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minHeight="40dp"
                android:outlineAmbientShadowColor="#FFF7F7"
                android:paddingHorizontal="12dp"
                android:paddingVertical="13dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Nova senha"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeColor="@color/borda_input"
            app:hintTextColor="#247AE8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/novaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minHeight="40dp"
                android:outlineAmbientShadowColor="#FFF7F7"
                android:paddingHorizontal="12dp"
                android:paddingVertical="13dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Confirmar senha"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeColor="@color/borda_input"
            app:hintTextColor="#247AE8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/segundaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minHeight="40dp"
                android:outlineAmbientShadowColor="#FFF7F7"
                android:paddingHorizontal="12dp"
                android:paddingVertical="13dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/botaoCadastrar"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:backgroundTint="#2B76D7"
            android:fontFamily="@font/montserrat_medium"
            android:text="Redefinir"
            android:textSize="25dp"
            app:cornerRadius="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>